# tracee

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/actions/build-distributions/: action.yml
.github/workflows/: upload_pypi.yml
notebook/: quickstart.ipynb  tracee  tracee_performance_verification.ipynb
notebook/sample/: Makefile  generate_knn-graph.py  generate_mock_data.py  generate_tracklet.py
paper/: .gitattributes  .gitignore  .latexmkrc  jssij.bst  jssij.sty  manuscript.tex  reference.bib  src.bib
paper/figs/: elapsed_time.gp  fdslgm_similarity.gp  fdslgm_similarity.svgz  knn_sample.gp  mockdata.gp  mockdata_3d.gp
paper/figs/data/: elapsed_time_summary.txt  minimalknn_seed100.txt
paper/sections/: abstract.tex  algorithm.tex  appendix.tex  conclusion.tex  introduction.tex  performance.tex  table_elapsed_time.tex  tutorial.py
tracee/: __init__.py  extract.py
