[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tracee"
version = "0.0.3"
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Ryou Ohsawa", email = "ohsawa@ioa.s.u-tokyo.ac.jp"},
]
maintainers = [
    {name = "Ryou Ohsawa", email = "ohsawa@ioa.s.u-tokyo.ac.jp"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.7"
dependencies = [
    "minimalKNN>=0.5",
    "fdlsgm>=0.5.5",
]

[tool.setuptools.packages.find]
where = ["."]
